# EVE

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SPECIFICATION.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: Containerfile  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 2cbec45ccc3d_create_phase_1_schema.py  8e4f05d8e2f7_add_auth_session_foundation.py  a9d4f2c1e6b8_add_user_disabled_at.py  c31c60fcb21e_add_sso_configuration.py
backend/app/: __init__.py  cli.py  main.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  base.py
backend/app/repositories/: __init__.py  base.py
backend/app/routers/: admin.py  auth.py  findings.py  settings.py
backend/app/services/: audit.py  bootstrap.py
backend/app/services/auth/: __init__.py  dependencies.py  mfa.py  permissions.py  security.py  sessions.py
backend/app/services/exploit_intel/: __init__.py
backend/app/services/scanners/: __init__.py  base.py  dedupe.py  greenbone.py
backend/tests/: test_admin_users_roles_api.py  test_audit_log.py  test_auth_api.py  test_auth_security.py  test_auth_sessions.py  test_cli.py  test_config.py  test_database.py  test_dedupe.py  test_findings_api.py  test_greenbone_sync.py  test_health.py  test_models.py  test_permissions.py  test_rbac_api.py  test_repository.py  test_seed.py  test_settings_api.py  test_settings_scanners_api.py
frontend/: Containerfile  eslint.config.js  index.html  package-lock.json  package.json
(+17 files in other folders)
