[project]
name = "eve-backend"
version = "0.1.0"
description = "FastAPI backend for EVE"
requires-python = ">=3.14"
dependencies = [
  "alembic==1.18.4",
  "asyncpg==0.31.0",
  "celery==5.6.3",
  "defusedxml==0.7.1",
  "fastapi==0.136.1",
  "httpx==0.28.1",
  "PyJWT[crypto]==2.12.1",
  "pydantic==2.13.1",
  "pydantic-settings==2.13.0",
  "python-json-logger==4.1.0",
  "redis==7.4.0",
  "sqlalchemy[asyncio]==2.0.49",
  "uvicorn[standard]==0.42.0",
]

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.22.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.12",
  "bandit==1.9.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]
